# web_apiGEN

./: .env  Dockerfile  README.md  build.sh  docker-compose.yaml  dockerfile  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
app/: database.py
app/crud/: post_crud.py  theme_crud.py  user_crud.py
app/models/: post_models.py  theme_models.py  user_models.py
app/routes/: post_routes.py  theme_routes.py  user_routes.py
app/schemas/: post_schema.py  theme_schema.py  user_schema.py
config/: database.py
crud/: crud.py
