[tool.poetry]
name = "poetry-api"
version = "0.1.0"
description = ""
authors = ["sebastiansouza <sebastian.asouzasp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.6.0"
anyio = "4.3.0"
blinker = "1.7.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
fastapi = "0.110.0"
greenlet = "3.0.3"
gunicorn = "21.2.0"
h11 = "0.14.0"
id = "1.3.0"
idna = "3.6"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
Mako = "1.3.2"
MarkupSafe = "2.1.5"
packaging = "23.2"
psycopg2 = "2.9.9"
pydantic = "2.6.2"
pydantic_core = "2.16.3"
python-dotenv = "1.0.1"
requests = "2.31.0"
sniffio = "1.3.0"
SQLAlchemy = "2.0.27"
starlette = "0.36.3"
typing_extensions = "4.9.0"
urllib3 = "2.2.1"
uvicorn = "0.27.1"
Werkzeug = "3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
